# auger

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  harness-state.mmd  session-state.mmd
.claude/: launch.json  settings.json
.claude/rules/: llama-cpp-responses.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
.qwen/skills/auto-skill-test-agent-server/: SKILL.md
.run/: Run agent-server.run.xml  Run webUI + server.run.xml  dev.run.xml
agent-core/: Cargo.toml  README.md  auger-statemachine.mmd
agent-core/src/: events.rs  lib.rs  schema.rs  session.rs  states.rs  system_prompt.rs
agent-core/src/conversation/: mod.rs
agent-core/src/session/: auto_approval.rs  events.rs  handle.rs  history.rs  mod.rs  recorder.rs  runtime.rs  sess_automaton.rs  session.rs  session_builder.rs  session_history.rs  session_loop.rs  states.rs  tool_call_batch.rs  tool_registry.rs  trace.rs
agent-core/src/tools/: auto_approval.rs  default_registry.rs  mod.rs  tool_call_batch.rs  tool_decisions.rs  tool_execution.rs  tool_registry.rs
agent-core/tests/: session.rs  session_persistence.rs
agent-loop/: Cargo.toml  loop.mmd
agent-loop/src/: events.rs  lib.rs  model_stream.rs  runtime.rs  session_state.rs  tool_call_batch.rs
agent-loop/tests/: session_loop.rs
agent-server/: Cargo.toml  README.md  api.http  openapi.yaml
agent-server/src/: agent.rs  config.rs  conversation.rs  main.rs  prompt.rs  provider_config.rs  server_types.rs  session.rs  system_prompt.rs
agent-server/src/conversation/: clanker.rs  mod.rs  user.rs
agent-server/src/session/: events.rs  handle.rs  mod.rs  session_loop.rs
agent-tools/: Cargo.toml
agent-tools/src/: README.md  dummy.rs  edit.rs  fetch_content.rs  glob.rs  grep.rs  lib.rs  list_files.rs  rate_limiter.rs  read.rs  shell.rs  todo.rs  web_fetch.rs  web_fetch_text.rs  web_search.rs  write.rs
auger-driver/: Cargo.toml  README.md  loop.mmd
auger-driver/src/: agent.rs  driver.rs  events.rs  facade.rs  interrupt_states.rs  lib.rs  model_stream.rs  persistence.rs  restore.rs  session_state.rs  streaming.rs  tool_batch.rs  waiting_for_tools.rs
auger-driver/src/states/: interrupt_states.rs  mod.rs  streaming.rs  waiting_for_tools.rs
auger-driver/tests/: failure.rs  happy_path.rs  interruption.rs  session_loop.rs
auger-memory/: Cargo.toml  README.md  memory.mmd
auger-traces/: Cargo.toml  README.md  trace_format.jsonl
auger-traces/src/: event.rs  lib.rs  model.rs  schema.rs  session.rs  tool.rs  trace_file.rs
auger-traces/tests/: schema_example.rs
auger-tui/: Cargo.toml
auger-tui/src/: api.rs  app.rs  main.rs  types.rs  ui.rs
builtin-tools/: Cargo.toml
builtin-tools/src/: dummy.rs  edit.rs  fetch_content.rs  glob.rs  grep.rs  lib.rs  list_files.rs  rate_limiter.rs  read.rs  shell.rs  shell_policy.rs  todo.rs  web_fetch.rs  web_fetch_text.rs  web_search.rs  write.rs
memory/: feedback_cargo_add.md
provider/: Cargo.toml  README.md
provider-anthropic/: Cargo.toml
provider-anthropic/src/: catalog.rs  lib.rs
provider-dummy/: Cargo.toml
provider-dummy/src/: lib.rs
provider-openai-chatcompletions/: Cargo.toml  README.md  tool_call.http
provider-openai-chatcompletions/src/: catalog.rs  lib.rs
provider-openai-responses/: Cargo.toml
provider-openai-responses/src/: catalog.rs  lib.rs
provider/src/: lib.rs  model.rs  openai.rs  request_builder.rs  thread.rs
provider/src/capabilities/: catalog.rs  mod.rs
provider/src/types/: mod.rs  request.rs  response.rs  tool.rs
tool-call-healer/: Cargo.toml
tool-call-healer/src/: lib.rs
webui/: FE.md  README.md  WEBUI-CHANGE.md  package.json  pnpm-lock.yaml  vite.config.js
webui/src/: app.css  app.html
webui/src/lib/: DiffViewer.svelte  api.js  markdown.js  mock-store.js  session.svelte.js  status.svelte.js
webui/src/lib/components/: AssistantMessage.svelte  Composer.svelte  Markdown.svelte  ReasoningToggle.svelte  SessionSidebar.svelte  SessionView.svelte  TodoPanel.svelte  ToolCallCard.svelte  ToolCallGroup.svelte  UserMessage.svelte
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/sessions/[id]/: +page.svelte
webui/src/routes/v1/sessions/: +server.js
webui/src/routes/v1/sessions/[id]/approve/: +server.js
webui/src/routes/v1/sessions/[id]/events/: +server.js
webui/src/routes/v1/sessions/[id]/input/: +server.js
webui/src/routes/v1/sessions/[id]/snapshot/: +server.js
