[workspace]
resolver = "3"
members = ["agent-core","agent-server","agent-tools","provider","provider-openai-chatcompletions", "provider-openai-responses"]

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
futures-core = "0.3.32"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "rt", "sync"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
