[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-tools = { version = "0.1.0", path = "../agent-tools" }
builtin-tools = { version = "0.1.0", path = "../builtin-tools" }
futures.workspace = true
provider = { version = "0.1.0", path = "../provider" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
either = "1.16.0"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
