[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-tools.workspace = true
provider.workspace = true
auger-traces.workspace = true

futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
either.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
auger-driver.workspace = true
tokio-util.workspace = true

[dev-dependencies]
async-trait.workspace = true
builtin-tools = { path = "../builtin-tools" }
provider-dummy.workspace = true
tracing-subscriber.workspace = true
