[package]
name = "agent-server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-tools = { path = "../agent-tools" }
axum = { version = "0.8.9", features = ["macros"] }
futures.workspace = true
provider = { path = "../provider" }
provider-openai-chatcompletions = { version = "0.1.0", path = "../provider-openai-chatcompletions" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
