[package]
name = "agent-server"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core.workspace = true
builtin-tools = { path = "../builtin-tools" }
axum = { version = "0.8.9", features = ["macros"] }
futures.workspace = true
provider.workspace = true
provider-openai-chatcompletions.workspace = true
provider-openai-responses.workspace = true
provider-anthropic.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
agent-tools.workspace = true
toml = "1.1.2"
auger-traces.workspace = true

[dev-dependencies]
tower = "0.5.3"
