[package]
name = "agent-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
glob = "0.3.3"
grep = "0.4.1"
json-schema-derive = "0.0.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir = "2.5.0"
