[package]
name = "auger-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
provider.workspace = true

either.workspace = true
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
getset.workspace = true
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
provider-dummy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
