[package]
name = "auger-traces"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["serde", "v4", "v7"]}
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde_json = "1.0.150"
thiserror.workspace = true
