[package]
name = "auger-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
crossterm = "0.29.0"
futures.workspace = true
ratatui = "0.30.2"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }
