[package]
name = "builtin-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-tools.workspace = true
async-trait.workspace = true
glob = "0.3.3"
ignore = "0.4"
grep = "0.4.1"
reqwest.workspace = true
scraper = "0.27.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
walkdir = "2.5.0"
yash-syntax = "0.23.1"
agent-core.workspace = true
provider.workspace = true
