[package]
name = "provider-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
provider.workspace = true
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-stream.workspace = true
