[package]
name = "provider-openai-chatcompletions"
version = "0.1.0"
edition = "2024"

[dependencies]
provider = { path = "../provider" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-openai = { version = "0.41.0", features = ["chat-completion"] }
async-stream = "0.3"
