[package]
name = "provider-openai-chatcompletions"
version = "0.1.0"
edition = "2024"

[dependencies]
provider.workspace = true
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { workspace = true }
async-openai = { version = "0.41.0", features = ["chat-completion", "byot", "model"] }
async-stream.workspace = true
